--- a/sockets-boiler-plate/public/index.html
+++ b/sockets-boiler-plate/public/index.html
@@ -16,6 +16,10 @@
       socket.on("connect", function () {
         console.log("Conectado al servidor");
       });
+
+      socket.on('disconnect', function() {
+        console.log('Perdimos conexión con el servidor')
+      })
     </script>
   </body>
 </html>
