--- a/sockets-boiler-plate/public/index.html
+++ b/sockets-boiler-plate/public/index.html
@@ -13,12 +13,19 @@
     <script>
       var socket = io();
 
+      // Escuchar
       socket.on("connect", function () {
         console.log("Conectado al servidor");
       });
 
       socket.on('disconnect', function() {
         console.log('Perdimos conexión con el servidor')
+      });
+
+      // Enviar Información
+      socket.emit('sendMessage', {
+        user: 'Alan',
+        message: 'Message from Alan'
       })
     </script>
   </body>
