socket-boiler-plate(): emit from server and listenning on cliente

--- a/sockets-boiler-plate/public/index.html
+++ b/sockets-boiler-plate/public/index.html
@@ -27,6 +27,11 @@
         user: 'Alan',
         message: 'Message from Alan'
       })
+
+      // Escuchar
+      socket.on('sendMessage', function(messageFromServer) {
+        console.log('Servidor', messageFromServer)
+      })
     </script>
   </body>
 </html>
