--- a/sockets-boiler-plate/public/index.html
+++ b/sockets-boiler-plate/public/index.html
@@ -10,34 +10,6 @@
   <body>
     <h1>Programa de Colas</h1>
     <script src="socket.io/socket.io.js"></script>
-    <script>
-      var socket = io();
-
-      // Escuchar
-      socket.on("connect", function () {
-        console.log("Conectado al servidor");
-      });
-
-      socket.on("disconnect", function () {
-        console.log("Perdimos conexión con el servidor");
-      });
-
-      // Enviar Información
-      socket.emit(
-        "sendMessage",
-        {
-          // user: "Alan",
-          message: "Message from Alan",
-        },
-        function (responseFromServer) {
-          console.log("Respuesta Server;", responseFromServer);
-        }
-      );
-
-      // Escuchar
-      socket.on("sendMessage", function (messageFromServer) {
-        console.log("Servidor", messageFromServer);
-      });
-    </script>
+    <script src="js/socket-custom.js"></script>
   </body>
 </html>
