--- a/sockets-chat/public/index.html
+++ b/sockets-chat/public/index.html
@@ -9,11 +9,7 @@
 </head>
 
 <body>
-    <h1>Programa de Colas</h1>
-
-
-    <script src="socket.io/socket.io.js"></script>
-    <script src="js/socket-custom.js"></script>
+    <h1>Chat</h1>
 
 
 </body>
