--- a/sockets-chat/public/index.html
+++ b/sockets-chat/public/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Programa de Colas</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <h1>Chat</h1>
 
-
-</body>
-
+    <form action="chat.html">
+      <input type="text" name="name" placeholder="name" />
+      <input type="text" name="room" placeholder="room" />
+      <button type="submit">Enter Room</button>
+    </form>
+  </body>
 </html>
